feat: Refactor main app class, create route registry. add openapi and authors routers
